crates/neenee-tui-view/src/snapshots/neenee_tui_view__snapshot_tests__bash_expanded_folds_long_output_keeping_tail_events.snap
---
source: crates/neenee-tui-view/src/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
- Run cargo build · failed 0ms
  $ cargo build
  line 1
  line 2
  line 3
  ⋯ 14 lines hidden
  line 18
  line 19
  line 20
  exit 1

backgrounds:
A=#070808  B=#111312  .=reset
0: A80
1: B80
2: B80
3: B80
4: B80
5: B80
6: B80
7: B80
8: B80
9: B80
