crates/neenee-tui-view/src/snapshots/neenee_tui_view__snapshot_tests__bash_expanded_preserves_stdout_stderr_interleaving.snap
---
source: crates/neenee-tui-view/src/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
- Run cargo build · 0ms
  $ cargo build
  Compiling a
  warning: b
  Compiling c

backgrounds:
A=#070808  B=#111312  .=reset
0: A80
1: B80
2: B80
3: B80
4: B80
