crates/neenee-tui-view/src/snapshots/neenee_tui_view__snapshot_tests__bash_running_streams_live_preview.snap
---
source: crates/neenee-tui-view/src/snapshot_tests.rs
expression: "render_grid(&m, 80, 24)"
---
+ Run cargo build

backgrounds:
A=#070808  .=reset
0: A80
